set( src
BoundingBox.h
CMakeLists.txt
Deviation.cxx
Deviation.h
FileVrml1.cpp
FileVrml1.h
FileVrml2.cpp
FileVrml2.h
Mesh.cpp
MeshDev.cxx
MeshDev.h
Mesh.h
Neighborhood.cxx
Neighborhood.h
Plane.h
PlaneMesh.cxx
PlaneMesh.h
Sample.cxx
Sample.h
Stopwatch.h
UniformGrid.cxx
UniformGrid.h
VectorT.h
)

add_executable( MeshDev ${src} )
